# server/src/main/kotlin/dev/marcal/mediapulse/server/config/SpaForwardController.kt
@@ -28,6 +28,8 @@ class SpaForwardController {
         "/books",
         "/books/authors/{id}",
         "/books/{slug}",
+        "/workouts",
+        "/workouts/",
         "/games",
         "/games/",
         "/games/{slug}",
